# mcp-playbook-dsfr

./: .dockerignore  .editorconfig  .env.example  .gitignore  CAHIER_TEST_EXHAUSTIF.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION_MCP_COMPLETE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPRECATED.md  Dockerfile  FICHE-IDENTITE.md  GUIDE_MISE_A_JOUR.md  INSTALLATION_MCP.md  LICENSE  PRODUCTION.md  PRODUCTION_STATUS.md  README.md  ROADMAP.md  ROADMAP_MCP_CLEAN.md  SECURITY.md  START_SERVER.sh  UPDATE_COMPLETE.sh  UPDATE_DOCS.md  VERIFICATION_FINALE.md  check_dsfr_version.py  claude_desktop_config.json  claude_desktop_config_correct.json  components_analysis.json  components_knowledge_base.json  conformity_report.txt  docker-compose.yml  dsfr-agent  fiches_analysis_report.json  install.sh  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  (+14 more)
.claude/: mcp-config.json
.github/workflows/: ci.yml  test.yml
docs/: CONFIGURATION.md  DSFR_v1.14.1_COMPLETE_DATA_20250905_1423.json  DSFR_v1.14.1_GITHUB_20250905_1416.json  DSFR_v1.14.1_GITHUB_20250905_1416.md  DSFR_v1.14.1_ULTRA_COMPLETE_20250905_1423.md  GUIDE_UTILISATEUR.md  api-documentation.json  api-examples.md
docs/deployment/: DEPLOYMENT.md
docs/roadmap/: GUIDELINES_SYSTEM.md  ROADMAP.md
gabarits/: dsfr_complete_library.json  dsfr_library.json  index.html
gabarits/accordion/: accordion_group.html  accordion_single.html
gabarits/alert/: alert_closable.html  alert_error.html  alert_info.html  alert_sm.html  alert_success.html  alert_warning.html
gabarits/back_to_top/: back_to_top_basic.html
gabarits/badge/: badge_basic.html  (+7 more)
mcp/: __init__.py  config.py  server.py
mcp_local/: README.md  __init__.py  config.py  dsfr_server.py  dsfr_server_simple.py  server.py  server_final.py  server_mcp_correct.py
roadmap/: AUDIT-MCP-DSFR-92-100.md  ROADMAP-4.md  ROADMAP-6.md  ROADMAP-7.md  ROADMAP-8-EXCELLENCE-96-100.md
scripts/: README.md  build_complete_library.py  build_html_library.py  update_complete.py  update_from_github.py  update_from_storybook.py
src/: __init__.py
tests/: README.md  ROADMAP.md  check_conformity.py  dsfr-assistant.py  test-mcp-dsfr-all-components.py  test-mcp-dsfr-assistant-generation.py  test-mcp-dsfr-assistant.py  test-mcp-dsfr-blind-spots-DEPRECATED.py  test-mcp-dsfr-cognitive.py  test-mcp-dsfr-conformity.py  test-mcp-dsfr-design.py  test-mcp-dsfr-generator.py  test-mcp-dsfr-integration.py  test-mcp-dsfr-registry.py  test-mcp-dsfr-server.py  test-mcp-dsfr-test-generator.py  test_all_components.py  test_integration_mcp.py  test_mcp.py  test_non_regression.py
tools/: README.md
(+179 files in other folders)
